muni bus flicker fix

--- a/style.css
+++ b/style.css
@@ -18,4 +18,10 @@ svg{
 	-webkit-perspective: 1000;
 	-webkit-backface-visibility: hidden;
 	-webkit-transform:translate3d(0,0,0);
+	-webkit-transform-style: preserve-3d;
+}
+
+#muni_bus{
+	-webkit-backface-visibility: hidden;
+	-webkit-transform:translate3d(0,0,0);
 }
